# xinter

./: .gitignore  GUI_README.md  LICENSE  QUICKSTART_GUI.md  README.md  analysis.ipynb  pyproject.toml  zensical.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: gui.md  index.md  linters.md
xinter/: cli.py  core.py  cross_check.py  gui.py  linters.py  outlier.py
